# MultimerDocking

./: .gitignore  .gitmodules  README.md  pyproject.toml  sample.ipynb
configs/data/: pdb.yaml
configs/experiment/: train.yaml
custom/configs/: paths.yaml  training.yaml
custom/configs/architecture/: dockingdit_100M.yaml
custom/configs/lightning_module/: docking_module.yaml
custom/data_processing/: data.py  process_AFDDI.py
custom/model/: architecture.py  lightning_module.py
custom/scripts/: train.py
src/custom/configs/: evaluate.yaml  paths.yaml  preprocess_data.yaml  training.yaml
src/custom/data_processing/: AFDDI_pipeline.py  data.py
src/custom/experimental/: code_snippets.py  experimental_snippets.py
src/custom/model/: architecture.py  interpolants.py  layers.py  lightning_module.py  pLM.py  sampling.py
src/custom/scripts/: evaluate.py  plot_results.py  preprocess_data.py  print_metrics.py  train.py
src/custom/utils/: benchmarking.py  inspect.py  structure_utils.py
src/simplefold/: cli.py  inference.py  process_mmcif.py  process_structure.py  test.py  train.py  train_fsdp.py  wrapper.py
src/simplefold/boltz_data_pipeline/: const.py  types.py
src/simplefold/datasets/: test_datamodule.py  train_datamodule.py
src/simplefold/evaluation/: analyze_folding.py  analyze_two_state.py
src/simplefold/model/: flow.py  simplefold.py
src/simplefold/processor/: protein_processor.py
src/simplefold/utils/: boltz_utils.py  datamodule_utils.py  esm_utils.py  fasta_utils.py  instantiators.py  lr_scheduler.py  mlx_utils.py  mmcif_utils.py  pylogger.py  (+2 more)
(+66 files in other folders)
